# linked-list-sprint-project-east-coast-coding-crew

./: .gitattributes  .gitignore  .ninja_deps  BUILD.md  CMakeCache.txt  CMakeLists.txt  Doxyfile  LICENSE  README.md  SECURITY.md  build.ninja  cmake_install.cmake  premake5.lua  soci_test
.cmake/api/v1/reply/: cache-v2-cc44e2fe8ce2b5cea8dc.json  cmakeFiles-v1-a5b651ad8bd1848c717f.json  codemodel-v2-404f465062da57021afc.json  index-2025-03-31T10-42-16-0898.json  target-Core-e7b422a91cdea8de1d9a.json  toolchains-v1-3f84b6838769bf836f4d.json
docs/: East-coast-coding-crew.docx  East-coast-coding-crew.pptx
docs/html/: annotated.html  annotated_dup.js  class_cli_manager-members.html  class_cli_manager.html  class_cli_manager.js  class_database-members.html  class_database.html  class_database.js  class_eccc_1_1_core_1_1_cli_general_logger-members.html  class_eccc_1_1_core_1_1_cli_general_logger.html  class_eccc_1_1_core_1_1_cli_general_logger.js  class_eccc_1_1_core_1_1_cli_manager-members.html  class_eccc_1_1_core_1_1_cli_manager.html  class_eccc_1_1_core_1_1_cli_manager.js  class_eccc_1_1_core_1_1_database-members.html  class_eccc_1_1_core_1_1_database.html  class_eccc_1_1_core_1_1_database.js  class_eccc_1_1_core_1_1_historical_db_manager-members.html  class_eccc_1_1_core_1_1_historical_db_manager.html  class_eccc_1_1_core_1_1_historical_db_manager.js  class_eccc_1_1_core_1_1_historical_linked_list-members.html  class_eccc_1_1_core_1_1_historical_linked_list.html  class_eccc_1_1_core_1_1_historical_linked_list.js  classes.html  cli__manager_8cpp.html  cli__manager_8cpp.js  cli__manager_8hpp.html  cli__manager_8hpp.js  cli__manager_8hpp_source.html  database_8cpp.html  database_8hpp.html  database_8hpp.js  database_8hpp_source.html  dir_39f515a53027a011543417b36d40d872.html  dir_39f515a53027a011543417b36d40d872.js  dir_6d7a3b1345215626f42d73aa9c5bc945.html  dir_6d7a3b1345215626f42d73aa9c5bc945.js  dir_bfce66af7f49ec7e1a87d7507c8f95fd.html  dir_bfce66af7f49ec7e1a87d7507c8f95fd.js  dir_ef8207ce41f99fabcdf48df2e18673ba.html  (+49 more)
docs/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  defines_1.js  defines_2.js  defines_3.js  defines_4.js  defines_5.js  defines_6.js  defines_7.js  defines_8.js  enums_0.js  enumvalues_0.js  enumvalues_1.js  enumvalues_2.js  files_0.js  files_2.js  functions_0.js  functions_1.js  functions_10.js  functions_2.js  (+27 more)
eccc/core/include/: cli_manager.hpp  database.hpp  historical_db_manager.hpp  historical_linked_list.hpp  utilities.hpp
eccc/core/src/: cli_manager.cpp  database.cpp  historical_db_manager.cpp  historical_linked_list.cpp  main.cpp  utilities.cpp
eccc/core/tests/: database_test.cpp  historical_linked_list_test.cpp  run_tests.cpp
my-build/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake
scraper/: main.py
test-build/: CMakeCache.txt  build.ninja
